Fixed CSS issue of input prompt being too low
git-svn-id: http://dev.vaadin.com/svn/addons/TouchKit@24395 de684a11-831f-0410-ab27-cb86445eb682

--- a/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
+++ b/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
@@ -1791,7 +1791,7 @@ span.v-datefield-calendarpanel-month {
 
 .v-touchkit-verticalcomponentgroup .v-filterselect>input {
 	color: #4e64a1;
-	padding-top: 10px;
+	/*padding-top: 10px;*/
 	font-size:17px;
 }
 
